# ef-vfm

./: LICENCE  README.md  main.py  process_dataset.py  pyproject.toml
ef_vfm/: main.py  trainer.py
ef_vfm/ckpt/adult/test/: config.pkl
ef_vfm/configs/: ef_vfm_configs.toml
ef_vfm/models/: flow_model.py
ef_vfm/modules/: main_modules.py  transformer.py
eval/mle/: mle.py
tests/: conftest.py  test_attention.py  test_config.py  test_flow_model.py  test_mlp.py  test_reconstructor.py  test_tokenizer.py  test_trainer.py  test_transformer.py  test_unimodmlp.py  test_utils.py
