[project]
name = "ef-vfm"
version = "0.1.0"
description = "Exponential Flow Velocity Field Model for tabular data generation"
requires-python = ">=3.10"
dependencies = [
    # PyTorch ecosystem
    "torch>=2.0",
    "torchdiffeq>=0.2.3",
    # Data science
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "category-encoders>=2.6",
    # Evaluation metrics
    "sdmetrics>=0.14",
    "xgboost>=2.0",
    "prdc>=0.2",
    "plotly>=5.15",
    "kaleido",
    "Pillow>=10.0",
    "openpyxl",
    # Logging & utilities
    "wandb>=0.15",
    "tqdm>=4.65",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "icecream>=2.1",
]

# synthcity lives in its own group because it pulls heavy / conflicting deps.
# Install with:  uv sync --group synthcity
[dependency-groups]
dev = [
    "pytest>=7.0",
]
synthcity = [
    "synthcity",
    "category-encoders>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ef_vfm", "src", "eval"]
